--- a/package.json
+++ b/package.json
@@ -1,8 +1,23 @@
 {
   "dependencies": {
     "@hapi/hapi": "^20.0.1",
+    "@hapi/inert": "^6.0.3",
+    "@octokit/plugin-retry": "^3.0.3",
+    "@octokit/plugin-throttling": "^3.3.1",
     "@octokit/rest": "^18.0.6",
-    "parcel": "^2.0.0-beta.1"
+    "catbox-mongodb": "^4.2.1",
+    "celarium": "mkg20001/celarium#dev",
+    "hapi-pino": "^8.3.0",
+    "hapi-sentry": "^3.1.0",
+    "hapi-spa-serve": "^0.1.1",
+    "joi": "^17.2.1",
+    "mkg-bin-gen": "^0.1.4",
+    "mongoose": "^5.10.7",
+    "parcel": "^2.0.0-beta.1",
+    "relish": "^3.0.0"
+  },
+  "engines": {
+    "node": ">=12.0.0"
   },
   "template": {
     "extends": [
