--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@octokit/rest": "^18.0.6",
     "catbox-mongodb": "^4.2.1",
     "celarium": "github:mkg20001/celarium#dev",
+    "debug": "^4.2.0",
     "hapi-pino": "^8.3.0",
     "hapi-sentry": "^3.1.0",
     "hapi-spa-serve": "^0.1.1",
@@ -14,6 +15,7 @@
     "mkg-bin-gen": "^0.1.4",
     "mongoose": "^5.10.7",
     "parcel": "^2.0.0-beta.1",
+    "pino": "^6.6.1",
     "relish": "^3.0.0"
   },
   "engines": {
